# llm-wrapper

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  README_en.md  README_zh.md  config.yaml.example  docker-compose.yml
.github/workflows/: docker-publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  config.json
.planning/phases/01-data-models/: 01-01-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md
docs/: protocol_conversion_test_dataset.md
src/: cli_proxy_api_manager.rs  cli_proxy_api_proxy.rs  config.rs  lib.rs  main.rs  models.rs  oauth.rs  proxy.rs  router.rs  state.rs
src/api/: mod.rs
src/handlers/: admin.rs  chat.rs  cli_proxy.rs  config_api.rs  debug.rs  mod.rs  models_api.rs  quota.rs
src/transform/: anthropic.rs  canonical.rs  chat_completions.rs  image.rs  mod.rs  responses.rs  stream.rs
src/webui/: index.html
tests/: config.rs  models.rs  protocol_conversion.rs  proxy.rs  router.rs
