[package]
name = "llm-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "llm-wrapper"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

# Async
tokio = { version = "1.4", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
http-body = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# File watching
notify = "8.0"

# UUID for IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing
tempfile = "3"

# Time handling for token expiry
chrono = { version = "0.4", features = ["serde"] }

# Home directory path for token cache location
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
